feat: add user service
